--- a/app/components/tweetlist/tweet.less
+++ b/app/components/tweetlist/tweet.less
@@ -1,8 +1,8 @@
 .tweet:hover {
-    background-color: #f5f8fa;
+    background-color: #eee;
 }
 .tweet {
-    border-bottom: 1px solid #e1e8ed;
+    border-bottom: 1px solid #eee;
     cursor: pointer;
     position: relative;
     min-height: 51px;
@@ -42,7 +42,7 @@ li .tweet {
     letter-spacing: .01em;
     margin: 0;
     line-height: 1.6em;
-    color: #8899a6;
+    color: #2e6da4;
 }
 
 .no-info {
