--- a/app/components/datepicker/datepicker.less
+++ b/app/components/datepicker/datepicker.less
@@ -9,20 +9,22 @@ rzslider {
 
 rzslider .rz-pointer {
   top: -6px;
-  width: 20px;
-  height: 20px;
-  background-color: #296294;
+  width: 16px;
+  height: 16px;
+  background-color: #2e6da4;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
 rzslider .rz-pointer:focus {
     outline: none;
     box-shadow: 0 2px 4px -1px rgba(0,0,0,.2),0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12);
-    background-color: #204f77;
+    background-color: #2e6da4;
 }
 
 rzslider .rz-bar {
-  height: 6px;
+  height: 7px;
+  background: #e3e3e3;
+  border-radius: 1px;
 }
 rzslider .rz-pointer:after {
     position: static;
