--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -65,7 +65,8 @@ p {
 }
 
 .form-group {
-    margin-bottom: 5px;
+    margin-top: 15px;
+    margin-bottom: 10px;
 }
 
 .padding-search {
@@ -245,4 +246,9 @@ code {
 
 .component-padding {
   padding: 4px;
+}
+
+.tweetlist-box {
+   margin-top: -10px;
+   margin-bottom: -10px;
 }
