--- a/app/components/geospatialFilter/geospatialFilter.tpl.html
+++ b/app/components/geospatialFilter/geospatialFilter.tpl.html
@@ -1,6 +1,6 @@
 <div class="col-xs-8 padding-search">
     <div class="input-group searchinputfield" id="geospatialfilterinput">
-        <input class="form-control input-sm" type="text" ng-model="filterString" ng-keypress="onKeyPress($event)" ng-model="geospatialfilterInput" ng-click="onFocus()" ng-blur="onBlur()">
+        <input class="form-control input-sm" type="text" ng-model="filter.geo" ng-keypress="onKeyPress($event)" ng-click="onFocus()" ng-blur="onBlur()">
         <span class="input-group-addon">
             <i class="glyphicon glyphicon-search"></i>
         </span>
