--- a/app/components/toolbarSearch/toolbarSearchField.tpl.html
+++ b/app/components/toolbarSearch/toolbarSearchField.tpl.html
@@ -1,7 +1,7 @@
 <div class="col-xs-7 padding-search">
     <div class="input-group searchinputfield" id="searchinput">
         <input class="form-control input-sm" type="text" placeholder="Enter keyword" ng-keypress="onKeyPress($event)"
-          ng-model="searchInput" ng-click="onFocus()" ng-blur="onBlur()">
+          ng-model="filter.text" ng-click="onFocus()" ng-blur="onBlur()">
         <span class="input-group-addon">
             <i class="glyphicon glyphicon-search"></i>
         </span>
