--- a/app/components/userFilter/userFilter.tpl.html
+++ b/app/components/userFilter/userFilter.tpl.html
@@ -3,7 +3,7 @@
         <form ng-submit="userSearch()">
             <div class="input-group searchinputfield" id="userfilterinput">
                 <input class="form-control input-sm" type="text" placeholder="@user"
-                  ng-model="userfilterInput" ng-click="onFocus()" ng-blur="onBlur()">
+                  ng-model="filter.user" ng-click="onFocus()" ng-blur="onBlur()">
                 <span class="input-group-addon">
                     <i class="glyphicon glyphicon-search"></i>
                 </span>
