--- a/app/components/datepicker/datepicker.less
+++ b/app/components/datepicker/datepicker.less
@@ -35,3 +35,6 @@ rzslider .rz-pointer:hover:after {
 rzslider .rz-pointer.rz-active:after {
   background-color: rgba(255, 255, 255, 0);
 }
+rzslider .rz-bubble {
+  bottom: -26px;
+}
