Simplify search-btn (#56)

--- a/app/components/userFilter/userFilter.tpl.html
+++ b/app/components/userFilter/userFilter.tpl.html
@@ -4,8 +4,8 @@
             <div class="input-group searchinputfield" id="userfilterinput">
                 <input class="form-control input-sm" type="text" placeholder="@user"
                   ng-model="filter.user" ng-click="onFocus()" ng-blur="onBlur()">
-                <span class="input-group-addon">
-                    <i class="glyphicon glyphicon-search"></i>
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-search"></i></button>
                 </span>
             </div>
         </form>
