--- a/app/components/toolbarSearch/toolbarSearchField.tpl.html
+++ b/app/components/toolbarSearch/toolbarSearchField.tpl.html
@@ -1,16 +1,14 @@
-<div class="col-xs-7 padding-search">
+<div class="col-xs-10 padding-search">
     <div class="input-group searchinputfield" id="searchinput">
         <input class="form-control input-sm" type="text" placeholder="Enter keyword" ng-keypress="onKeyPress($event)"
           ng-model="filter.text" ng-click="onFocus()" ng-blur="onBlur()">
-        <span class="input-group-addon">
-            <i class="glyphicon glyphicon-search"></i>
+        <span class="input-group-btn">
+           <button ng-click="doSearch()" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-search"></i></button>
         </span>
+
      </div>
 </div>
-<div class="col-xs-5 padding-search">
-    <span class="searchbtn">
-       <button class="btn btn-primary btn-sm" type="button" ng-click="doSearch()">Search</button>
-    </span>
+<div class="col-xs-2 padding-search">
     <span class="searchbtn">
         <button class="btn btn-primary btn-sm" type="button" ng-click="resetSearchInput()">Reset</button>
     </span>
