Fix geospatial search field (#57)
* Add queryService for transformation between queries and extents

move convinience methods from HeatMapSourceGenerator to own service to
use it in different services/directives

* Update geospatialFilterDirective to update query and map

update the geo query and the map extent based on the input of the
directive search field

* Use queryService everywhere and remove duplicate code

--- a/app/components/geospatialFilter/geospatialFilter.tpl.html
+++ b/app/components/geospatialFilter/geospatialFilter.tpl.html
@@ -2,7 +2,7 @@
     <div class="input-group searchinputfield" id="geospatialfilterinput">
         <input class="form-control input-sm" type="text" ng-model="filter.geo" ng-keypress="onKeyPress($event)" ng-click="onFocus()" ng-blur="onBlur()">
         <span class="input-group-btn">
-            <button class="btn btn-default btn-sm" type="button" ><i class="glyphicon glyphicon-search"></i></button>
+            <button class="btn btn-default btn-sm" type="button" ng-click="search()"><i class="glyphicon glyphicon-search"></i></button>
         </span>
     </div>
 </div>
