--- a/app/components/toolbarSearch/toolbarSearchField.tpl.html
+++ b/app/components/toolbarSearch/toolbarSearchField.tpl.html
@@ -10,7 +10,7 @@
 </div>
 <div class="col-xs-2 padding-search">
     <span class="searchbtn">
-        <button class="btn btn-primary btn-sm" type="button" ng-click="resetSearchInput()">Reset</button>
+        <button class="btn btn-primary btn-sm" type="button" ng-click="reset()">Reset</button>
     </span>
 
     <span class="searchbtn">
