--- a/app/components/userFilter/userFilter.tpl.html
+++ b/app/components/userFilter/userFilter.tpl.html
@@ -3,9 +3,9 @@
         <form ng-submit="userSearch()">
             <div class="input-group searchinputfield" id="userfilterinput">
                 <input class="form-control input-sm" type="text" placeholder="@user"
-                  ng-model="userfilterInput" ng-click="onFocus()" ng-blur="onBlur()">
-                <span class="input-group-addon">
-                    <i class="glyphicon glyphicon-search"></i>
+                  ng-model="filter.user" ng-click="onFocus()" ng-blur="onBlur()">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-search"></i></button>
                 </span>
             </div>
         </form>
