--- a/app/components/geospatialFilter/geospatialFilter.tpl.html
+++ b/app/components/geospatialFilter/geospatialFilter.tpl.html
@@ -1,15 +1,12 @@
-<div class="col-xs-8 padding-search">
+<div class="col-xs-12 padding-search">
     <div class="input-group searchinputfield" id="geospatialfilterinput">
-        <input class="form-control input-sm" type="text" ng-model="filterString" ng-keypress="onKeyPress($event)" ng-model="geospatialfilterInput" ng-click="onFocus()" ng-blur="onBlur()">
-        <span class="input-group-addon">
-            <i class="glyphicon glyphicon-search"></i>
+        <input class="form-control input-sm" type="text" ng-model="filter.geo" ng-keypress="onKeyPress($event)" ng-click="onFocus()" ng-blur="onBlur()">
+        <span class="input-group-btn">
+            <button class="btn btn-default btn-sm" type="button" ng-click="search()"><i class="glyphicon glyphicon-search"></i></button>
         </span>
     </div>
 </div>
 <div class="col-xs-4 padding-search">
-    <span class="searchbtn pull-left">
-        <button class="btn btn-primary btn-sm" type="button">Search</button>
-    </span>
     <span class="searchbtn padding-search">
         <a href="" class="infobtn" ng-click="showGeospatialInfo()">
             <span class="glyphicon glyphicon-info-sign"></span>
