--- a/app/components/toolbarSearch/toolbarSearchField.tpl.html
+++ b/app/components/toolbarSearch/toolbarSearchField.tpl.html
@@ -1,14 +1,17 @@
-<div class="col-xs-10 padding-search">
-    <div class="input-group searchinputfield" id="searchinput">
-        <input class="form-control input-sm" type="text" placeholder="Enter keyword" ng-keypress="onKeyPress($event)"
-          ng-model="filter.text" ng-click="onFocus()" ng-blur="onBlur()">
-        <span class="input-group-btn">
-           <button ng-click="doSearch()" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-search"></i></button>
+<div class="col-xs-9 padding-search">
+    <div class="row toolbarsearch" ng-class="{'toolbarsearch-focus': focus}">
+        <keyword removefn="removeKeyWord" ng-repeat="keywordFilter in filterArray track by $index" remove="true" tag="{{keywordFilter}}"></keyword>
+        <span class="input-group searchinputfield" id="searchinput">
+            <input class="md-input" type="text" placeholder="Enter keyword" ng-keyup="onKeyPress($event)"
+              ng-model="textSearchInput.value" ng-blur="focus=false" ng-focus="focus=true">
+            <span ng-click="doSearch()" class="input-group-addon border-search">
+                <i class="glyphicon glyphicon-search"></i>
+            </span>
         </span>
 
      </div>
 </div>
-<div class="col-xs-2 padding-search">
+<div class="col-xs-3 padding-search">
     <span class="searchbtn">
         <button class="btn btn-primary btn-sm" type="button" ng-click="reset()">Reset</button>
     </span>
@@ -18,4 +21,8 @@
              <span class="glyphicon glyphicon-info-sign"></span>
         </a>
     </span>
+</div>
+<div class="col-xs-12 padding-search" style="padding-top: 8px;">
+    <keyword  ng-repeat="keyword in suggestedKeywords" class="keyword-min"
+        ng-click="addSuggestedKeywordToSearchInput(keyword.value)" remove="false" tag="{{keyword.value}}"></keyword>
 </div>
