--- a/app/components/exportButton/exportButton.tpl.html
+++ b/app/components/exportButton/exportButton.tpl.html
@@ -1,6 +1,10 @@
 <div class="row">
     <div class="col-sm-4 col-xs-3 export-slider">
-        <input type="number" class="form-control input-sm ng-valid ng-not-empty ng-dirty ng-valid-number ng-touched" ng-model="export.numDocuments">
+        <div class="row searchtext" ng-class="{'searchtext-focus': focus}">
+            <span class="input-group searchinputfield" id="searchinput">
+                <input class="md-input input-sm ng-valid ng-not-empty ng-dirty ng-valid-number ng-touched" type="number" placeholder="@user" ng-model="export.numDocuments" ng-blur="focus=false" ng-focus="focus=true">
+            </span>
+         </div>
     </div>
 
     <div class="col-sm-8 col-xs-9 export-slider">
