--- a/app/components/toolbarSearch/toolbarSearchField.tpl.html
+++ b/app/components/toolbarSearch/toolbarSearchField.tpl.html
@@ -1,5 +1,5 @@
 <div class="col-xs-9 padding-search">
-    <div class="row toolbarsearch" ng-class="{'toolbarsearch-focus': focus}">
+    <div class="row searchtext" ng-class="{'searchtext-focus': focus}">
         <keyword removefn="removeKeyWord" ng-repeat="keywordFilter in filterArray track by $index" remove="true" tag="{{keywordFilter}}"></keyword>
         <span class="input-group searchinputfield" id="searchinput">
             <input class="md-input" type="text" placeholder="Enter keyword" ng-keyup="onKeyPress($event)"
