--- a/app/components/toolbarSearch/toolbarSearch.less
+++ b/app/components/toolbarSearch/toolbarSearch.less
@@ -25,3 +25,32 @@
 .border-search {
     border: 0;
 }
+
+.toolbarsearch {
+    border-color: rgba(0,0,0,0.12);
+    padding-bottom: 0;
+    border-width: 0 0 1px;
+    border-style: solid;
+    margin-right: 6px;
+    margin-left: 0px;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+.toolbarsearch-focus {
+    border-color: rgba(0,0,0,0);
+    box-shadow: 0 2px #337ab7;
+}
+
+.btn-tag{
+    outline: none !important;
+    margin-right: 8px;
+    margin-top: 2px;
+    input[type=checkbox]{
+        position: absolute;
+        clip: rect(0,0,0,0);
+        pointer-events: none;
+    }
+}
+.btn-tag.active {
+    background: #204d74 !important;
+    color: white;
+}
