--- a/app/components/toolbarSearch/toolbarSearchField.tpl.html
+++ b/app/components/toolbarSearch/toolbarSearchField.tpl.html
@@ -1,6 +1,6 @@
 <div class="col-xs-9 padding-search">
-    <div class="row searchtext" ng-class="{'searchtext-focus': focus}">
-        <keyword removefn="removeKeyWord" ng-repeat="keywordFilter in filterArray track by $index" remove="true" tag="{{keywordFilter}}"></keyword>
+    <div class="row toolbarsearch" ng-class="{'searchtext-focus': focus}">
+        <keyword removefn="removeKeyWord(keyword)" ng-repeat="keywordFilter in filterArray track by $index" remove="true" tag="{{keywordFilter}}"></keyword>
         <span class="input-group searchinputfield" id="searchinput">
             <input class="md-input" type="text" placeholder="Enter keyword" ng-keyup="onKeyPress($event)"
               ng-model="textSearchInput.value" ng-blur="focus=false" ng-focus="focus=true">
@@ -23,6 +23,11 @@
     </span>
 </div>
 <div class="col-xs-12 padding-search" style="padding-top: 8px;">
+    <div class="btn-group pull-left">
+        <label class="btn btn-default btn-xs btn-tag" ng-class="{active: tagSwitch.value}">
+            <input type="checkbox" autocomplete="off" ng-model="tagSwitch.value" ng-change="toggleSuggestKeywords()" ng-disabled="tagSwitch.disable"> Suggestions
+        </label>
+    </div>
     <keyword  ng-repeat="keyword in suggestedKeywords" class="keyword-min"
         ng-click="addSuggestedKeywordToSearchInput(keyword.value)" remove="false" tag="{{keyword.value}}"></keyword>
 </div>
