--- a/app/components/toolbarSearch/toolbarSearch.less
+++ b/app/components/toolbarSearch/toolbarSearch.less
@@ -44,6 +44,7 @@
     outline: none !important;
     margin-right: 8px;
     margin-top: 2px;
+    margin-bottom: 4px;
     input[type=checkbox]{
         position: absolute;
         clip: rect(0,0,0,0);
@@ -51,6 +52,7 @@
     }
 }
 .btn-tag.active {
-    background: #204d74 !important;
+    background: #337ab7 !important;
+    border: 1px solid #337ab7;
     color: white;
 }
