--- a/app/components/keyword/keyWord.less
+++ b/app/components/keyword/keyWord.less
@@ -1,13 +1,13 @@
-@height: 32px;
-@height-min: 24px;
+@height: 26px;
+@height-min: 22px;
 
 .md-chips {
     cursor: default;
-    border-radius: 12px;
+    border-radius: 4px;
     display: inline;
     height: @height;
     line-height: @height;
-    margin: 0px 8px 4px 0;
+    margin: 0 4px 4px 0;
     padding: 0 8px;
     float: left;
     box-sizing: border-box;
@@ -26,7 +26,7 @@
         background: transparent;
         border: none;
         box-shadow: none;
-        margin: 0 -4px 0 0px;
+        margin: 0 -4px 4px 0px;
         position: relative;
         outline: none;
         font-size: 16px;
@@ -42,6 +42,7 @@ keyword.keyword-min .md-chips{
         line-height: @height-min;
         color: rgba(0, 0, 0, 0.5);
         font-size: 12px;
+        margin-top: 2px;
 
         button {
             height: @height-min;
