--- a/app/components/keyword/keyword.tpl.html
+++ b/app/components/keyword/keyword.tpl.html
@@ -1,4 +1,4 @@
 <div class="md-chips">
     <span>{{tag}}</span>
-    <button ng-click="removefn({keyword: tag})" ng-if="remove">&times;</button>
+    <button ng-click="removefn({keyword: tag})" ng-if="removeTag">&times;</button>
 </div>
