Tweet location on the map (#72)
* bbox

* bbox in map

* remove bbox when mouse leave

* change the styles location

* Spaces deleted

--- a/app/components/tweetlist/tweetlist.tpl.html
+++ b/app/components/tweetlist/tweetlist.tpl.html
@@ -1,5 +1,6 @@
 
-<li ng-repeat="tweet in tweetList" class="tweet" style="list-style: none;">
+<li ng-repeat="tweet in tweetList" class="tweet" ng-mouseleave="removeAllfeatures()"
+    ng-mouseover="addCircle(tweet.coord)">
   <div class="list-item-text">
     <h3>@{{tweet.user_name}}</h3>
     <h4>{{tweet.text}}</h4>
