--- a/app/components/geospatialFilter/geospatialFilter.tpl.html
+++ b/app/components/geospatialFilter/geospatialFilter.tpl.html
@@ -1,12 +1,13 @@
-<div class="col-xs-12 padding-search">
-    <div class="input-group searchinputfield" id="geospatialfilterinput">
-        <input class="form-control input-sm" type="text" ng-model="filter.geo" ng-keypress="onKeyPress($event)" ng-click="onFocus()" ng-blur="onBlur()">
-        <span class="input-group-btn">
-            <button class="btn btn-default btn-sm" type="button" ng-click="search()"><i class="glyphicon glyphicon-search"></i></button>
+<div class="col-xs-11 padding-search">
+    <div class="input-group row searchtext searchinputfield" id="geospatialfilterinput" ng-class="{'searchtext-focus': focus}">
+        <input ng-model="filter.geo" ng-keypress="onKeyPress($event)" ng-click="onFocus()"
+        class="md-input" type="text" ng-keyup="onKeyPress($event)" ng-blur="focus=false" ng-focus="focus=true">
+        <span ng-click="doSearch()" class="input-group-addon border-search">
+            <i class="glyphicon glyphicon-search"></i>
         </span>
     </div>
 </div>
-<div class="col-xs-4 padding-search">
+<div class="col-xs-1 padding-search">
     <span class="searchbtn padding-search">
         <a href="" class="infobtn" ng-click="showGeospatialInfo()">
             <span class="glyphicon glyphicon-info-sign"></span>
