--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -103,14 +103,26 @@ code {
 }
 
 .export-slider {
-  padding-top:0px;
-  height: 40px;
+  margin-top: 8px;
   font-size: 10px;
+}
+
+.export-slider .rz-bubble, .rz-limit, rzslider .rz-bubble.rz-limit {
+  color: #609dd2;
+}
+
+.results-display {
+  font-weight: 400;
+  font-size: 0.900em;
+  text-align: right;
 }
 
 .results-display .control-label {
   margin-top: 8px;
   font-weight: 400;
+  color: #609dd2;
+  font-size: 0.850em;
+  text-align: right;
 }
 
 /*
@@ -295,4 +307,18 @@ code {
 .tweetlist-box {
    margin-top: -10px;
    margin-bottom: -10px;
+}
+
+.searchtext {
+    border-color: rgba(0,0,0,0.12);
+    padding-bottom: 0;
+    border-width: 0 0 1px;
+    border-style: solid;
+    margin-right: 6px;
+    margin-left: 0px;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+.searchtext-focus {
+    border-color: rgba(0,0,0,0);
+    box-shadow: 0 2px #337ab7;
 }
