--- a/app/components/datepicker/datepicker.less
+++ b/app/components/datepicker/datepicker.less
@@ -1,9 +1,15 @@
+.datepicker-wrapper {
+    padding-right: 0px !important;
+    padding-left: 5px !important;
+}
+
 
 /*
  * Slider
  */
 rzslider {
     width: 100%;
+    max-width: 360px;
     margin: 0;
 }
 
