--- a/app/components/tweetlist/tweet.less
+++ b/app/components/tweetlist/tweet.less
@@ -9,6 +9,16 @@
     padding: 9px 12px;
     list-style: none;
 }
+
+.tweet-component {
+    overflow-y: auto;
+}
+
+.height-tweet {
+    height: 260px;
+    overflow-y: auto;
+}
+
 li .tweet {
   list-style: none;
 }
