--- a/app/components/tweetlist/tweetlist.tpl.html
+++ b/app/components/tweetlist/tweetlist.tpl.html
@@ -1,6 +1,6 @@
 <div style="max-height: {{availableHeight}}px;" class="tweet-component">
     <li ng-repeat="tweet in tweetList" class="tweet" ng-mouseleave="removeAllfeatures()"
-        ng-mouseover="addCircle(tweet.coord)">
+        ng-mouseenter="selectTweet(tweet)">
       <div class="list-item-text">
         <h3>@{{tweet.user_name}}</h3>
         <h4>{{tweet.text}}</h4>
