--- a/app/components/keyword/keyWord.less
+++ b/app/components/keyword/keyWord.less
@@ -7,7 +7,7 @@
     display: inline;
     height: @height;
     line-height: @height;
-    margin: 0 4px 4px 0;
+    margin-left: 4px;
     padding: 0 8px;
     float: left;
     box-sizing: border-box;
