--- a/app/components/tweetlist/tweet.less
+++ b/app/components/tweetlist/tweet.less
@@ -1,17 +1,19 @@
 .tweet:hover {
-    background-color: #eee;
+    background-color: #ebf3f9;
 }
 .tweet {
     border-bottom: 1px solid #eee;
     cursor: pointer;
     position: relative;
     min-height: 51px;
-    padding: 9px 12px;
+    padding: 10px 15px;
+    margin: 0 5px 0 5px;
     list-style: none;
 }
 
 .tweet-component {
     overflow-y: auto;
+    margin:-10px 0 -10px 0;
 }
 
 .height-tweet {
@@ -25,7 +27,7 @@ li .tweet {
 
 .list-item-text h3 {
     font-size: 14px;
-    font-weight: bold;
+    font-weight: 500;
     letter-spacing: .01em;
     margin: 0;
     line-height: 1.2em;
@@ -60,4 +62,19 @@ li .tweet {
     font-size: 200%;
     text-align: center;
     color: #888;
+}
+.dl-horizontal dt {
+   width: 110px;
+   color: #337ab7;
+   font-weight: 200;
+}
+.dl-horizontal dd {
+   margin-left: 120px;
+   font-weight: 500;
+}
+.list-group {
+   margin-bottom: 0px;
+}
+.list-group-item {
+    padding: 9px 15px;
 }
