--- a/app/components/datepicker/datepicker.less
+++ b/app/components/datepicker/datepicker.less
@@ -9,7 +9,7 @@
  */
 rzslider {
     width: 100%;
-    max-width: 360px;
+    max-width: 400px;
     margin: 0;
 }
 
@@ -43,4 +43,11 @@ rzslider .rz-pointer.rz-active:after {
 }
 rzslider .rz-bubble {
   bottom: -26px;
+}
+
+.form-horizontal .control-label {
+  padding-top: 7px;
+  font-size: 0.850em;
+  font-weight: 300;
+  color: #337ab7;
 }
