--- a/app/components/tweetlist/tweetPanel.tpl.html
+++ b/app/components/tweetlist/tweetPanel.tpl.html
@@ -1,11 +1,19 @@
-<dl class="dl-horizontal" ng-if="!panelEmpty">
-    <dt>id</dt>
-    <dd>{{selectedTweet.id}}</dd>
-    <dt>created_at</dt>
+<dl class="dl-horizontal list-group" ng-if="!panelEmpty">
+<div class="list-group-item">
+    <dt>Id</dt>
+    <dd >{{selectedTweet.id}}</dd>
+</div>
+<div class="list-group-item">
+    <dt>Created at</dt>
     <dd>{{selectedTweet.created_at}}</dd>
-    <dt>coord</dt>
+</div>
+<div class="list-group-item">
+    <dt>Coord</dt>
     <dd>{{selectedTweet.coord}}</dd>
-    <dt>user_name</dt>
+</div>
+<div class="list-group-item">
+    <dt>User Name</dt>
     <dd>{{selectedTweet.user_name}}</dd>
+</div>
 </dl>
 <div class="no-info" ng-if="panelEmpty">Tweet details</div>
