--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -99,13 +99,15 @@ code {
     min-width: 390px;
     background-color: #fff;
     border-radius: 2px;
-    padding: 15px 10px;
+    padding: 10px 10px;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.1),0 1px 1px 0 rgba(0,0,0,.14),0 1px 1px -1px rgba(0,0,0,.12);
 }
 
 .export-slider {
   margin-top: 8px;
   font-size: 10px;
+  font-size: 0.850em;
+  font-weight: 200;
 }
 
 .export-slider .rz-bubble, .rz-limit, rzslider .rz-bubble.rz-limit {
@@ -114,13 +116,13 @@ code {
 
 .results-display {
   font-weight: 400;
-  font-size: 0.900em;
   text-align: right;
 }
 
 .results-display .control-label {
-  margin-top: 8px;
-  font-weight: 400;
+  margin-top: 5px;
+  margin-right: 3px;
+  font-weight: 200;
   color: #609dd2;
   font-size: 0.850em;
   text-align: right;
@@ -176,11 +178,12 @@ code {
 
 .searchinputfield input{
     border-right-style:none;
+    margin-left: 3px;
 }
 
 .input-group-btn .btn{
     border-left-style:none;
-    padding: 6px 12px 5px 12px;
+
     background-color: transparent;
 }
 
