The map gets locked to the bottom and right and dynamic zoom. (#85)
* The map gets locked to the bottom and right and dynamic zoom.

* Fix tests and issues from lock map in background.

* Fix tests

--- a/app/components/heatmap/heatmap.tpl.html
+++ b/app/components/heatmap/heatmap.tpl.html
@@ -1,9 +1,2 @@
-<div id="resultCounterText">
-    <form class="form-inline">
-        <div class="form-group">
-            <p ng-show="counter">Results for keyword: {{counter}}</p>
-        </div>
-    </form>
-</div>
 <!-- the ol3 map -->
-<div class="map" id="map"></div>
+<div class="map heatmap" id="map"></div>
