--- a/app/components/tweetlist/tweet.less
+++ b/app/components/tweetlist/tweet.less
@@ -13,7 +13,7 @@
 
 .tweet-component {
     overflow-y: auto;
-    margin:-10px 0 -10px 0;
+    margin:-10px 0 0 0;
 }
 
 .height-tweet {
@@ -63,6 +63,12 @@ li .tweet {
     text-align: center;
     color: #888;
 }
+
+.count-padding {
+    padding: 10px;
+    margin-bottom: -10px;
+}
+
 .dl-horizontal dt {
    width: 110px;
    color: #337ab7;
