--- a/app/components/exportButton/exportButton.tpl.html
+++ b/app/components/exportButton/exportButton.tpl.html
@@ -23,8 +23,7 @@
       </div>
       <div class="col-sm-4 export-slider">
              <div>
-                       <!-- THIS BUTTON IS JUST FOR REFERENCE IT HAS TO BE SETTED AS A RESET ACTION TRIGGER -->
-                <button class="btn btn-primary pull-right col-sm-12" id="exportbtn" title="EXPORT" type="button" ng-click="startExport()">RESET</button>
+                <button class="btn btn-primary pull-right col-sm-12" id="exportbtn" title="RESET" type="button" ng-click="reset()">RESET</button>
                 <span class="searchbtn">
                 </span>
             </div>
