--- a/app/components/toolbarSearch/toolbarSearchField.tpl.html
+++ b/app/components/toolbarSearch/toolbarSearchField.tpl.html
@@ -18,7 +18,7 @@
         </a>
     </span>
 </div>
-<div class="col-xs-12 padding-search" style="padding-top: 8px;">
+<div class="col-xs-12 padding-search" style="padding-top: 10px; padding-bottom: 6px;">
     <div class="btn-group pull-left">
         <label class="btn btn-default btn-xs btn-tag" ng-class="{active: tagSwitch.value}">
             <input type="checkbox" autocomplete="off" ng-model="tagSwitch.value" ng-change="toggleSuggestKeywords()" ng-disabled="tagSwitch.disable"> Suggestions
