--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -11,9 +11,7 @@ html, body {
 
 .map {
   max-height: 100%;
-  margin: 4px;
-  border: solid 1px #b3b3b3;
-  border-radius: 4px;
+  margin: 0px;
 }
 
 .map-row {
@@ -56,8 +54,8 @@ p {
 }
 
 .form-group {
-    margin-top: 15px;
-    margin-bottom: 10px;
+    margin-top: 0px;
+    margin-bottom: 20px;
 }
 
 .padding-search {
@@ -91,14 +89,14 @@ code {
 }
 
 .export-slider {
-  margin-top: 8px;
+  margin-top: 5px;
   font-size: 10px;
   font-size: 0.850em;
   font-weight: 200;
 }
 
 .export-slider .rz-bubble, .rz-limit, rzslider .rz-bubble.rz-limit {
-  color: #609dd2;
+  color: #337ab7;
 }
 
 .results-display {
@@ -110,7 +108,7 @@ code {
   margin-top: 5px;
   margin-right: 3px;
   font-weight: 200;
-  color: #609dd2;
+  color: #337ab7;
   font-size: 0.850em;
   text-align: right;
 }
@@ -175,7 +173,7 @@ code {
 }
 
 .input-group-btn .btn .glyphicon{
-    color: #2e6da4;
+    color: #337ab7;
 }
 
 .input-group-btn .btn:hover {
