--- a/app/components/histogram/histogram.less
+++ b/app/components/histogram/histogram.less
@@ -1,4 +1,8 @@
 .bar-graph svg {
-    margin-top: 9px;
+    margin-top: 15px;
     margin-bottom: -14px;
+}
+
+#inbar.disabled svg g rect {
+    fill: #E3E3E3;
 }
