--- a/app/components/datepicker/datepicker.tpl.html
+++ b/app/components/datepicker/datepicker.tpl.html
@@ -1,4 +1,4 @@
-    <div class="col-md-12 component-padding">
+    <div class="col-md-12 padding-search">
         <div class="form-horizontal">
             <div class="row">
                 <label class="control-label col-xs-2">From</label>
@@ -27,12 +27,12 @@
         </div>
     </div>
 
-    <div class="col-md-12 component-padding">
+    <div class="col-md-12 padding-search">
         <div class="row">
           <div class="date-picker-input">
               <form ng-submit="onSubmitDateText()">
                     <div class="form-group">
-                        <div class="col-xs-11">
+                        <div class="col-xs-12">
                             <div class="row searchtext" ng-class="{'searchtext-focus': focus}">
                                 <span class="input-group searchinputfield" id="searchinput">
                                     <input class="md-input input-sm" type="text" ng-keyup="onKeyPress($event)" ng-model="dateString" ng-blur="focus=false" ng-focus="focus=true">
@@ -42,11 +42,11 @@
                                 </span>
                             </div>
                         </div>
-                        <span class="searchbtn col-xs-1 row">
+                        <!-- <span class="searchbtn col-xs-1 row">
                             <a href="" class="infobtn" ng-click="showDatepickerInfo()">
                                 <span class="glyphicon glyphicon-info-sign"></span>
                             </a>
-                        </span>
+                        </span> -->
                     </div>
               </form>
 
