--- a/app/components/resetButton/reset.less
+++ b/app/components/resetButton/reset.less
@@ -1,7 +1,9 @@
 .reset-btn {
     position: fixed;
-    bottom: 20px;
+    bottom: 25px;
+    margin-left: 305px;
     box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
     outline: none;
-    letter-spacing: 2px;
+    font-weight: 300;
+    letter-spacing: 1.3px;
 }
