--- a/app/components/toolbarSearch/toolbarSearchField.tpl.html
+++ b/app/components/toolbarSearch/toolbarSearchField.tpl.html
@@ -1,4 +1,4 @@
-<div class="col-xs-11 padding-search">
+<div class="col-xs-12 padding-search">
     <div class="row toolbarsearch" ng-class="{'searchtext-focus': focus}">
         <keyword removefn="removeKeyWord(keyword)" ng-repeat="keywordFilter in filterArray track by $index" remove="true" tag="{{keywordFilter}}"></keyword>
         <span class="input-group searchinputfield" id="searchinput">
@@ -11,13 +11,13 @@
 
      </div>
 </div>
-<div class="col-xs-1 padding-search">
+<!-- <div class="col-xs-1 padding-search">
     <span class="searchbtn">
         <a href="" class="infobtn" ng-click="showtoolbarSearchInfo()">
             <span class="glyphicon glyphicon-info-sign"></span>
         </a>
     </span>
-</div>
+</div> -->
 <div class="col-xs-12 padding-search" style="padding-top: 10px; padding-bottom: 6px;">
     <div class="btn-group pull-left">
         <label class="btn btn-default btn-xs btn-tag" ng-class="{active: tagSwitch.value}">
