--- a/app/components/userFilter/userFilter.tpl.html
+++ b/app/components/userFilter/userFilter.tpl.html
@@ -1,4 +1,4 @@
-    <div class="col-xs-11 padding-search">
+    <div class="col-xs-12 padding-search">
         <div class="row searchtext" ng-class="{'searchtext-focus': focus}">
             <span class="input-group searchinputfield" id="searchinput">
                 <input class="md-input" type="text" placeholder="@user" ng-keyup="onKeyPress($event)"
@@ -9,8 +9,8 @@
             </span>
         </div>
     </div>
-    <div class="col-xs-1 searchbtn padding-search">
+    <!-- <div class="col-xs-1 searchbtn padding-search">
         <a href="" class="infobtn" ng-click="showUserFilterInfo()">
              <span class="glyphicon glyphicon-info-sign"></span>
         </a>
-    </div>
+    </div> -->
