General-visual-adjustment (#105)
* bounding-box, color improvement for disabled histogram, tweet detail style

* disabled histogram color

--- a/app/components/datepicker/datepicker.less
+++ b/app/components/datepicker/datepicker.less
@@ -44,6 +44,9 @@ rzslider .rz-pointer.rz-active:after {
 rzslider .rz-bubble {
   bottom: -26px;
 }
+rzslider[disabled] .rz-pointer {
+  background-color: #e3e3e3;
+}
 
 .form-horizontal .control-label {
   padding-top: 7px;
