--- a/app/components/tweetlist/tweet.less
+++ b/app/components/tweetlist/tweet.less
@@ -77,22 +77,36 @@ li .tweet {
 
 .dl-horizontal dt {
    width: 110px;
-   color: #337ab7;
+   color: #fff;
    font-weight: 200;
    font-size: 0.8500em;
+   text-transform: uppercase;
 }
 .dl-horizontal dd {
    margin-left: 120px;
-   font-weight: 500;
+   font-weight: 200;
    font-size: 0.8500em;
+   color: #fff;
 }
 .list-group {
-   margin-bottom: 85px; // -- temporal --
+   margin-top: 4px;
 }
 .list-group-item {
-    padding: 3px 15px;
+    padding: 5px 15px;
     border: 0px;
+    margin-bottom: 0;
+    background-color: rgba(0,0,0,0.5);
 }
 .list-group-item:first-child {
-    border-top: 0px;
+    padding-top: 15px;
+}
+.list-group-item:last-child {
+    padding-bottom: 15px;
+}
+@media (min-width: 1200px) {
+    .tweet-detail-panel {
+        position: fixed;
+        right: 4px;
+        width: 393px;
+   }
 }
