--- a/app/components/tweetlist/tweetPanel.tpl.html
+++ b/app/components/tweetlist/tweetPanel.tpl.html
@@ -1,4 +1,4 @@
-<dl class="dl-horizontal list-group" ng-if="!panelEmpty">
+<dl class="dl-horizontal list-group tweet-detail-panel" ng-if="!panelEmpty">
 <div class="list-group-item">
     <dt>Id</dt>
     <dd >{{selectedTweet.id}}</dd>
