--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -342,13 +342,12 @@ code {
 .searchtext {
     border-color: rgba(0,0,0,0.12);
     padding-bottom: 0;
-    border-width: 0 0 1px;
+    border-width: 0 0 2px;
     border-style: solid;
     margin-right: 0px;
     margin-left: 0px;
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 .searchtext-focus {
-    border-color: rgba(0,0,0,0);
-    box-shadow: 0 2px #337ab7;
+    border-color: #337ab7;
 }
