--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -154,6 +154,39 @@ code {
         width: 1800px;
     }
 }
+@media (min-width:1200px){
+   .tweetlist-lg {
+      display: visible;
+   }
+   .time-components-lg {
+      display: visible;
+   }
+   .sidebar-tools-md {
+      display: none;
+   }
+}
+@media (min-width:800px) and (max-width:1200px){
+   .tweetlist-lg {
+      display: none;
+   }
+   .time-components-lg {
+      display: none;
+   }
+   .sidebar-tools-md {
+      display: visible; // this class is commented-out in 404.html 
+   }
+}
+@media (max-width:800px) {
+   .tweetlist-lg {
+      display: none;
+   }
+   .time-components-lg {
+      display: none;
+   }
+   .sidebar-tools-md {
+      display: none;
+   }
+}
 /*
  * CSS properties of search fields
  */
