Add  google baseMaps (#110)
* insert googleMaps libraries for openlayers

* fix bbox google-maps errors

* Fix styles and add google terrain basemap

--- a/app/components/responsiveView/responsiveView.tpl.html
+++ b/app/components/responsiveView/responsiveView.tpl.html
@@ -1,3 +1,5 @@
+<div class="top-panel"></div>
+<div class="left-panel"></div>
 <!-- min: 1200 -->
 
 <div class="container-fluid" ng-if="fullscreen">
