--- a/app/components/resetButton/resetButton.tpl.html
+++ b/app/components/resetButton/resetButton.tpl.html
@@ -1,7 +1,10 @@
 <div class="row">
-    <div class="col-sm-4">
-        <button class="btn btn-primary reset-btn" id="exportbtn"
-            title="RESET" type="button" ng-click="reset()">RESET</button>
-        <span class="searchbtn"></span>
+    <div class="col-xs-8">
+        <div class="reset-btn">
+            <button class="btn btn-default"
+            type="button" ng-click="toggleBaseMaps()">{{basemaps}}</button>
+            <button class="btn btn-primary" id="exportbtn"
+                title="RESET" type="button" ng-click="reset()">RESET</button>
+        </div>
     </div>
 </div>
