--- a/app/components/heatmap/heatmap.less
+++ b/app/components/heatmap/heatmap.less
@@ -6,3 +6,13 @@
     bottom: 0;
     height: 100vh;
 }
+
+#tooltip {
+    position: relative;
+    padding: 4px;
+    color: white;
+    white-space: nowrap;
+    font-size: : 1.2em;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 4px;
+}
