--- a/app/components/resetButton/reset.less
+++ b/app/components/resetButton/reset.less
@@ -1,14 +1,14 @@
 .reset-btn {
     position: fixed;
     bottom: 15px;
-    margin-left: 135px;
+    margin-left: 126px;
     font-weight: 300;
     letter-spacing: 1.3px;
 
     button {
         box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
         outline: none;
-        min-width: 120px;
+        width: 120px;
     }
 }
 
