--- a/app/components/resetButton/resetButton.tpl.html
+++ b/app/components/resetButton/resetButton.tpl.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="reset-btn">
-            <button class="btn btn-default" type="button" ng-click="toggleBaseMaps()">{{basemaps}}</button>
+            <button class="btn btn-default" type="button" ng-click="toggleBaseMaps()">BASEMAPS</button>
             <button class="btn btn-primary" id="resetbtn" title="RESET" type="button" ng-click="reset()">RESET</button>
         </div>
         <div class="reset-btn" style="margin-left: 0px;">
