Dataverse url button (#134)
* Add dataverse deposit url data to the appConfig.json file and create configuration service

* * Insert the button on the search interface, organize the button panel

* Dumb commit for fix test

* Dumb commit 2

--- a/app/components/responsiveView/responsiveView.tpl.html
+++ b/app/components/responsiveView/responsiveView.tpl.html
@@ -17,7 +17,7 @@
                 <tweetlist></tweetlist>
             </card-wrapper>
 
-            <reset-button></reset-button>
+            <button-panel></button-panel>
         </div>
 
         <div class="container col-400-12 col-800-12 col-1200-8 col-1600-9">
@@ -72,7 +72,7 @@
 
             <tweet-panel></tweet-panel>
 
-            <reset-button></reset-button>
+            <button-panel></button-panel>
        </div>
     </div>
 </div>
