--- a/app/components/buttonPanel/buttonPanel.less
+++ b/app/components/buttonPanel/buttonPanel.less
@@ -4,8 +4,8 @@
     bottom: 10px;
     font-weight: 300;
 
-    button, a {
+    button.from-panel, a.from-panel {
         outline: none;
-        box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
+        box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12);
     }
 }
