[WIP] Y axis time histogram (#144)
Y axis time histogram

--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -80,6 +80,7 @@ code {
 }
 
 .row-box {
+    min-height: 90px;
     max-width: 400px;
     min-width: 390px;
     background-color: #fff;
@@ -173,7 +174,7 @@ code {
       display: none;
    }
    .sidebar-tools-md {
-      display: visible; // this class is commented-out in 404.html 
+      display: visible; // this class is commented-out in 404.html
    }
 }
 @media (max-width:800px) {
