Change dynamically the X axis unit (#146)
* Configurable GAP format

* When the time slider or datepicker change, the URl must change

* Set default GAP depending of the q.geo given in the URL

* Refactor gap function and add PT1H time GAP

* Fix error when the change of time range is to small.

* Fix test

* Refactor functions

* Fix codeclimate

* Solved: application breaks when the search result is zero

* Abort $http request when other petition is generated

--- a/app/components/histogram/legend.tpl.html
+++ b/app/components/histogram/legend.tpl.html
@@ -1,5 +1,5 @@
 <div class="histogram-legend" style="padding-left: {{paddingBar}}px;">
-    <div ng-repeat="legend in legendList" style="width: {{legendWidth}}px;float:left">
+    <div ng-repeat="legend in legendList track by $index" style="width: {{legendWidth}}px;float:left">
         <div class="legend-ticks "></div>
         <div>{{legend}}</div>
     </div>
