--- a/app/components/buttonPanel/buttonPanel.tpl.html
+++ b/app/components/buttonPanel/buttonPanel.tpl.html
@@ -2,5 +2,6 @@
     <dataverse-button></dataverse-button>
     <export-button></export-button>
     <basemap-button></basemap-button>
+    <heatmap-button></heatmap-button>
     <reset-button></reset-button>
 </div>
