Tweet panel updated with sentiment info

--- a/app/components/tweetlist/tweetPanel.tpl.html
+++ b/app/components/tweetlist/tweetPanel.tpl.html
@@ -15,4 +15,12 @@
     <dt>User Name</dt>
     <dd>{{selectedTweet.user_name}}</dd>
 </div>
+<div class="list-group-item">
+    <dt>Geo position</dt>
+    <dd>{{selectedTweet.geoadmin_admin2_txt}}</dd>
+</div>
+<div class="list-group-item">
+    <dt>Sentiment</dt>
+    <dd class="tweet-emoji">{{selectedTweet.sentiment_pos ? "😀" : "☹️"}}</dd>
+</div>
 </dl>
