--- a/app/components/tweetlist/tweet.less
+++ b/app/components/tweetlist/tweet.less
@@ -16,6 +16,11 @@
     margin:-10px 0 0 0;
 }
 
+.tweet-emoji {
+    font-size: 20px !important;
+    margin-top: -4px;
+}
+
 .height-tweet {
     height: 260px;
     overflow-y: auto;
