create a message componet to notice on the BOP app

--- a/app/components/responsiveView/responsiveView.tpl.html
+++ b/app/components/responsiveView/responsiveView.tpl.html
@@ -1,5 +1,8 @@
+<alert></alert>
+
 <div class="top-panel"></div>
 <div class="left-panel"></div>
+
 <!-- min: 1200 -->
 
 <div class="container-fluid" ng-if="fullscreen">
