--- a/app/components/alert/alert.less
+++ b/app/components/alert/alert.less
@@ -1,12 +1,9 @@
 .alert-bop {
     z-index: 100;
     position: relative;
-    margin: 4px;
-    padding:10px;
-    border-color: red;
-    color: #5e4a27;
-
-    button {
-        right: 0px !important;
-    }
+    margin: 0px;
+    padding:5px;
+    border-color: none;
+    background-color: white;
+    color: #000000;
 }
