--- a/app/components/alert/alert.tpl.html
+++ b/app/components/alert/alert.tpl.html
@@ -1,6 +1,4 @@
-<div ng-if="message" class="alert alert-warning alert-dismissible alert-bop" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-  </button>
+<div ng-if="message" class="alert alert-warning alert-bop" role="alert">
+  <p style="text-align:left;margin-left:0.2cm;margin-right:0.2cm;"><b><font size="3">Harvard BOP</font></b><span style="float:right;"> <a href="http://gis.harvard.edu/services/project-consultation/project-resume/billion-object-platform-bop" class="btn btn-primary btn-xs">ABOUT</a></span></p>
   <span>{{message}}</span>
 </div>
