--- a/app/components/alert/alert.less
+++ b/app/components/alert/alert.less
@@ -6,4 +6,11 @@
     border-color: none;
     background-color: white;
     color: #000000;
+    border-radius: 0;
+
+    p {
+        text-align:left;
+        margin-left:0.2cm;
+        margin-right:0.2cm;
+    }
 }
